--- a/.releaserc
+++ b/.releaserc
@@ -2,4 +2,4 @@ cpan_user HMBRAND
 automated_testing 1
 skip_kwalitee 1
 skip_prereqs 1
-perls /pro/bin/perl5.6.2:/pro/bin/perl5.8.0:/usr/bin/perl:/pro/bin/perl5.8.7:/pro/bin/perl5.8.8:/pro/bin/perl5.10.0:/pro/bin/bleadperl
+perls /pro/bin/perl5.6.2:/pro/bin/perl5.8.0:/usr/bin/perl:/pro/bin/perl5.8.7:/pro/bin/perl5.8.8:/pro/bin/perl5.10.0
